[project]
name = "mcs-chatbot"
version = "2.1.11"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-search-documents>=11.6.0",
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "langchain>=1.0.3",
    "langchain-core>=1.0.3",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "numpy>=2.3.4",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "tenacity>=9.1.2",
    "uvicorn>=0.38.0",
]
